# Kotlin-SpringBoot-JavaFx

./: .gitignore  PackageConfig.exe4j  README.MD  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/: Main.kt
src/main/kotlin/com/app/: Constants.kt  Main.kt
src/main/kotlin/com/app/controller/: MyController.kt
src/main/kotlin/com/app/pojo/: Obj.kt  RespBean.kt
src/main/kotlin/com/app/service/: LicenceService.kt  MyService.kt
src/main/kotlin/com/app/util/: GenerateCodeUtil.kt
src/main/kotlin/com/app/view_model/: MainViewModel.kt
src/main/kotlin/controller/: MyController.kt
src/main/kotlin/service/: MyService.kt
src/main/kotlin/view_model/: MainViewModel.kt
src/main/resources/: application.yml  logback.xml
src/rust/: Cargo.toml  build.rs  create-jfx-image.bat  readme.adoc
src/rust/readjson/: Cargo.toml
src/rust/readjson/src/: main.rs
src/rust/src/: jvm.json  jvm_opens.conf  main.rs
src/test/kotlin/: CoroutineLearn.kt
